RESOLVED FIXED 259077
Video playback on Nintendo.com fails with "No supported media sources" error
https://bugs.webkit.org/show_bug.cgi?id=259077
Summary Video playback on Nintendo.com fails with "No supported media sources" error
Jer Noble
Reported 2023-07-10 15:11:31 PDT
Video playback on Nintendo.com fails with "No supported media sources" error
Attachments
Jer Noble
Comment 1 2023-07-10 15:11:39 PDT
Jer Noble
Comment 2 2023-07-10 15:18:18 PDT
EWS
Comment 3 2023-07-10 20:42:11 PDT
Committed 265933@main (3a1caaa7c86f): <https://commits.webkit.org/265933@main> Reviewed commits have been landed. Closing PR #15711 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.