Cherry-pick 3a1caaa7c86f. rdar://problem/110588102

Cherry-pick 265933@main (3a1caaa7c86f). rdar://110588102

        Video playback on Nintendo.com fails with "No supported media sources" error
        https://bugs.webkit.org/show_bug.cgi?id=259077
        rdar://110588102

        Reviewed by Andy Estes and Eric Carlson.

        In macOS Sonoma and iOS 17, the conventions of -isPlayableExtendedMIMEType have
        changed, and queries of HLS container types with `codecs=` parameters will start
        to return NO where they returned YES in previous versions of those platforms. To
        allow existing websites to continue to use those styles of queries, adopt
        -isPlayableExtendedMIMEType:options: with a key/value pair that indicates
        AVURLAsset should assume the query refers to a HLS stream with ISO-BMFF segments.

        * Source/WTF/wtf/PlatformHave.h:
        * Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.h:
        * Source/WebCore/PAL/pal/cocoa/AVFoundationSoftLink.mm:
        * Source/WebCore/PAL/pal/spi/cocoa/AVFoundationSPI.h:
        * Source/WebCore/platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.mm:
        (WebCore::AVAssetMIMETypeCache::canDecodeExtendedType):

        Canonical link: https://commits.webkit.org/265933@main

Identifier: 265870.166@safari-7616-branch